Add --add-opens for cdi testing